--- a/html/Text.html
+++ b/html/Text.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<ol>
-			<li><a href="http://ht20221997.byethost24.com/979.mobileconfig" target="_blank">解决Cydia软件源添加验证问题</a></li>
+			<li><a href="http://ht20221997.byethost24.com/?article/24.html" target="_blank">解决Cydia软件源添加验证问题</a></li>
 		</ol>
 	</body>
 </html>
